cleans up some static code analysis findings