@@ -2,15 +2,14 @@ package de.lray.service.admin.user.dto;
 
 import de.lray.service.admin.common.Meta;
 import jakarta.validation.constraints.NotEmpty;
-import jakarta.validation.constraints.NotNull;
 
-import java.util.Arrays;
 import java.util.List;
 
 @SuppressWarnings("java:S1104")
 public class UserResultItem {
 
-    public static final List<String> schemas = Arrays.asList("urn:ietf:params:scim:schemas:core:2.0:User");
+    public static final List<String> schemas =
+            List.of("urn:ietf:params:scim:schemas:core:2.0:User");
 
     public String id;
 
